# AsciiFetch

./: LICENSE  README.md
asciifetch/: pyproject.toml
asciifetch/src/asciifetch/: asciifetch.py  default_conf.toml
asciifetch/src/asciifetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/asciifetch/: asciifetch.py  default_conf.toml
