[project]
name = "asciifetch"
version = "0.1.0"
description = "asciifetch"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
asciifetch = "asciifetch.asciifetch:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[tool.setuptools.package-data]
asciifetch = ["*.toml"]
